--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb-base","plugin:jest/recommended","plugin:react/recommended"],
+  "extends": ["plugin:jest/recommended","plugin:react/recommended"],
   "env": {
     "browser": true
   },
