--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "babel": "^6.23.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.1.1",
     "react-test-renderer": "^16.9.0"
   },
   "devDependencies": {
-    "eslint-plugin-jest": "^22.17.0"
+    "@babel/preset-react": "^7.0.0",
+    "eslint-plugin-jest": "^22.17.0",
+    "react-styleguidist": "^9.1.16"
   },
   "scripts": {
     "start": "react-scripts start",
